--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="btn_login">Log In</string>
     <string name="btn_register"><font size="11">No account ? Register here</font></string>
     <string name="btn_retrieve_password"><font size="11">Forgot your password ?</font></string>
+    <string name="firstName_label">First Name</string>
+    <string name="firstName_hint">First Name</string>
+    <string name="last_name_label">Name</string>
+    <string name="last_name_hint">Name</string>
+    <string name="yearOfBirth">Year Of Birth</string>
+    <string name="yearOfBirth_hint">Year Of Birth</string>
 </resources>
