--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,14 @@
     <string name="email_hint"><font size="12">Email</font></string>
     <string name="email_label">Email</string>
     <string name="btn_login">Log In</string>
-    <string name="btn_register"><font size="11">No account ? Register here</font></string>
+    <string name="btn_registerL"><font size="11">No account ? Register here</font></string>
     <string name="btn_retrieve_password"><font size="11">Forgot your password ?</font></string>
     <string name="firstName_label">First Name</string>
     <string name="firstName_hint">First Name</string>
-    <string name="last_name_label">Name</string>
-    <string name="last_name_hint">Name</string>
+    <string name="last_name_label">Last Name</string>
+    <string name="last_name_hint">Last Name</string>
     <string name="yearOfBirth">Year Of Birth</string>
     <string name="yearOfBirth_hint">Year Of Birth</string>
+    <string name="btn_registerR">Register</string>
+    <string name="btn_back_login">Already have an account ?</string>
 </resources>
