--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,11 @@
     <string name="search">Search</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_searchable">SearchableActivity</string>
+
+    <!-- Create LAN Fragment -->
+    <string name="date_create_fragment">Date</string>
+    <string name="starts_create_fragment">Starts at </string>
+    <string name="ends_create_fragment">Ends at</string>
+    <string name="nbr_people_create_fragment">Max invited people</string>
+    <string name="btn_create_create_fragment">Create</string>
 </resources>
