--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,10 +74,11 @@
     <string name="nbr_people_create_fragment">Max invited people</string>
     <string name="btn_create_create_fragment">Create</string>
     <string name="dialog_title">Choose a number</string>
-    <string name="cancel_button">CANCEL</string>
+    <string name="cancel_button">"Cancel"</string>
     <string name="snackbar_text">End time must be after start time</string>
     <string name="snackbar_dismiss">Dismiss</string>
     <string name="progress_dialog_create">Creating your LAN...</string>
+    <string name="text_title">DATE AND TIME</string>
 
     <string-array name="Numbers">
         <item>1</item>
